Fixed post list on small screens.

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -236,9 +236,10 @@ header h1 a {
   	@extend article;
     display: inline-block; // intrinsic size
     text-align: left; // reset alignment
+    padding: 0 1em 0 2em;
   	
   	> li {
-  		list-style: circle inside;
+  		list-style: circle outside;
       margin: .5em 0;
   	}
   }
